// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Menu Active And Selected Item 1`] = `
<ul
  aria-label="some label"
  className="psds-menu psds-menu--origin-top-left"
  role="listbox"
>
  <li
    aria-selected={false}
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Not active
      </div>
    </button>
  </li>
  <li
    aria-selected={true}
    className="psds-menu__item psds-menu__item--active"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Selected
        <div
          className="psds-icon psds-icon--size-medium psds-menu__item-icon"
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m9.59 14.58-2.818-2.818a.5.5 0 0 0-.706-.001l-.71.705a.5.5 0 0 0-.002.708l3.882 3.882a.5.5 0 0 0 .708 0l9.292-9.292a.5.5 0 0 0 0-.708l-.702-.702a.5.5 0 0 0-.708 0L9.59 14.58z"
            />
          </svg>
        </div>
      </div>
    </button>
  </li>
  <li
    aria-selected={false}
    className="psds-menu__item psds-menu__item--disabled psds-menu__item--active"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Active disabled
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Active Item 1`] = `
<ul
  aria-label="some label"
  className="psds-menu psds-menu--origin-top-left"
  role="listbox"
>
  <li
    aria-selected={false}
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Not active
      </div>
    </button>
  </li>
  <li
    aria-selected={true}
    className="psds-menu__item psds-menu__item--active"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Active
      </div>
    </button>
  </li>
  <li
    aria-selected={false}
    className="psds-menu__item psds-menu__item--disabled psds-menu__item--active"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Active disabled
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Custom Style Item 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
      style={
        Object {
          "outline": "1px solid red",
        }
      }
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
      style={
        Object {
          "outline": "1px solid blue",
        }
      }
    >
      <div
        className="psds-menu__option-inner"
      >
        Two item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
      style={
        Object {
          "outline": "1px solid green",
        }
      }
    >
      <div
        className="psds-menu__option-inner"
      >
        Three item
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Divider Edge 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
  <div
    className="psds-menu__divider"
  />
</ul>
`;

exports[`Storyshots Components/Menu Divider Sandwich 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
  <div
    className="psds-menu__divider"
  />
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Two item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Three item
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Ellipsis 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <span
          className="psds-menu__ellipsis"
        >
          One item that has text that goes on forever and onward into the universes yet to be
        </span>
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item Disabled 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Single, disabled
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item Disabled Mix 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Enabled
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Disabled
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Enabled
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Disabled
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item Disabled Multiple 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Mult 1, disabled
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <button
      className="psds-menu__option"
      disabled={true}
    >
      <div
        className="psds-menu__option-inner"
      >
        Mult 2, disabled
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item Link 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <a
      className="psds-menu__option"
      href="https://duckduckgo.com"
      target="_blank"
    >
      <div
        className="psds-menu__option-inner"
      >
        Links to web
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item Links 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <a
      className="psds-menu__option"
      href="https://duck.com"
      target="_blank"
    >
      <div
        className="psds-menu__option-inner"
      >
        Enabled
      </div>
    </a>
  </li>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <a
      className="psds-menu__option"
      disabled={true}
      href="https://duck.com"
      target="_blank"
    >
      <div
        className="psds-menu__option-inner"
      >
        Disabled
      </div>
    </a>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <a
      className="psds-menu__option"
      href="https://duck.com"
      target="_blank"
    >
      <div
        className="psds-menu__option-inner"
      >
        Enabled
      </div>
    </a>
  </li>
  <li
    className="psds-menu__item psds-menu__item--disabled"
    data-disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
  >
    <a
      className="psds-menu__option"
      disabled={true}
      href="https://duck.com"
      target="_blank"
    >
      <div
        className="psds-menu__option-inner"
      >
        Disabled
      </div>
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item Next To Items With No Description 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <div
          className="psds-menu__item-description-wrapper"
        >
          <span>
            Can view
          </span>
          <span
            className="psds-menu__item-description"
          >
            View details, content and other members in the channel.
          </span>
        </div>
        <div
          className="psds-menu__item-icon-filler"
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <div
          className="psds-menu__item-description-wrapper"
        >
          <span>
            Can edit
          </span>
          <span
            className="psds-menu__item-description"
          >
            Edit details, add or remove content and invite or remove members
          </span>
        </div>
        <div
          className="psds-menu__item-icon-filler"
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <div
          className="psds-menu__item-description-wrapper"
        >
          <span>
            Make owner
          </span>
          <span
            className="psds-menu__item-description"
          >
            Edit details, add or remove content, invite or remove members and delete Channel
          </span>
        </div>
        <div
          className="psds-menu__item-icon-filler"
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Remove member
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Remove member with so many lines that it goes to a second line
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item With Description 1`] = `
<ul
  aria-label="some label"
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <div
          className="psds-menu__item-description-wrapper"
        >
          <span>
            item
          </span>
          <span
            className="psds-menu__item-description"
          >
            some words that describe a thing that really should wrap you known
          </span>
        </div>
        <div
          className="psds-menu__item-icon-filler"
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Item With Description Selected 1`] = `
<ul
  aria-label="some label"
  className="psds-menu psds-menu--origin-top-left"
  role="listbox"
>
  <li
    aria-selected={true}
    className="psds-menu__item psds-menu__item--active"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="option"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <div
          className="psds-menu__item-description-wrapper"
        >
          <span>
            item active
          </span>
          <span
            className="psds-menu__item-description"
          >
            some words that describe a thing that really should wrap you known
          </span>
        </div>
        <div
          className="psds-icon psds-icon--size-medium psds-menu__item-icon"
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m9.59 14.58-2.818-2.818a.5.5 0 0 0-.706-.001l-.71.705a.5.5 0 0 0-.002.708l3.882 3.882a.5.5 0 0 0 .708 0l9.292-9.292a.5.5 0 0 0 0-.708l-.702-.702a.5.5 0 0 0-.708 0L9.59 14.58z"
            />
          </svg>
        </div>
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Long Text 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <span
          className="psds-menu__ellipsis"
        >
          One item that has text that goes on forever and onward into the universes yet to be
        </span>
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        <span
          className="psds-menu__ellipsis"
        >
          Another item that takes a long time to explain in the context of everything that is in a line.
        </span>
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Menu Items Lots 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        0
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        1
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        2
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        3
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        4
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        5
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        6
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        7
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        8
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        9
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        10
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        11
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        12
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        13
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        14
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        15
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        16
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        17
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        18
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        19
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        20
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        21
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        22
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        23
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        24
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        25
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        26
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        27
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        28
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        index: 
        29
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Menu Items Multiple 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Two item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Three item
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Menu Items One 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Null Item 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Skip to three item
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu On Click 1`] = `
<ul
  className="psds-menu psds-menu--origin-top-left"
  role="menu"
>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        One item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        Two item
      </div>
    </button>
  </li>
  <li
    className="psds-menu__item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <button
      className="psds-menu__option"
    >
      <div
        className="psds-menu__option-inner"
      >
        TTwo item
      </div>
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components/Menu Position Below Left 1`] = `
Array [
  <div
    style={
      Object {
        "background": "pink",
        "display": "inline-block",
        "padding": "4px",
      }
    }
  >
    anchor
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      <ul
        className="psds-menu psds-menu--origin-top-left"
        role="menu"
      >
        <li
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
          >
            <div
              className="psds-menu__option-inner"
            >
              One item
            </div>
          </button>
        </li>
        <li
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
          >
            <div
              className="psds-menu__option-inner"
            >
              Two item
            </div>
          </button>
        </li>
        <li
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
          >
            <div
              className="psds-menu__option-inner"
            >
              Three item
            </div>
          </button>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Menu Position Below Right 1`] = `
Array [
  <div
    style={
      Object {
        "background": "pink",
        "display": "inline-block",
        "padding": "4px",
      }
    }
  >
    anchor
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <ul
      className="psds-menu psds-menu--origin-top-left"
      role="menu"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      <li
        className="psds-menu__item"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <button
          className="psds-menu__option"
        >
          <div
            className="psds-menu__option-inner"
          >
            One item
          </div>
        </button>
      </li>
      <li
        className="psds-menu__item"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <button
          className="psds-menu__option"
        >
          <div
            className="psds-menu__option-inner"
          >
            Two item
          </div>
        </button>
      </li>
      <li
        className="psds-menu__item"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <button
          className="psds-menu__option"
        >
          <div
            className="psds-menu__option-inner"
          >
            Three item
          </div>
        </button>
      </li>
    </ul>
  </div>,
]
`;
